# marlinspike

./: .env.example  .gitignore  COMPATIBILITY.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.fr.md  README.md  RELEASING.md  SECURITY.md  SUITE-MANIFEST.yaml  UPGRADING.md  _aggregate.py  _config.py  _i18n.py  app.py  deploy.sh  docker-compose.yml  pyproject.toml  releases.md  requirements.txt  setup_cython.py
.github/workflows/: ci.yml  release.yml
docs/: README.md  admin-and-audit.md  asset-baselines.md  asset-context.md  bronze-consumer-contract.md  cli-and-headless.md  extensibility-contracts.md  getting-started.md  i18n-and-locale.md  ioc-threat-hunting.md  live-capture.md  mitre-attack-guide.md  msbundle-format.md  ocsf-emit.md  projects-and-engagements.md  repo-family.md  run-store-and-recovery.md  taxonomy.md  time-scrubbing-and-extract.md  triage-methodology.md  workbench-guide.md
docs/architecture/: engine-composition.md
marlinspike/: __init__.py  __main__.py  _pcap_header.py  app.py  audit.py  auth.py  baselines.py  config.py  csrf.py  db_cli.py  engine.py  enrich.py  i18n.py  iocs.py  models.py  recovery.py  run_store.py  setup_wizard.py  taxonomy.py
marlinspike-capd/: Dockerfile  README.md  pyproject.toml
marlinspike-capd/capd/: __init__.py  bpf.py  cli.py  interfaces.py  server.py  supervisor.py
marlinspike-capd/marlinspike_capd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
marlinspike-capd/systemd/: install.sh  marlinspike-capd.service
marlinspike-capd/tests/: test_smoke.py
marlinspike/capture/: __init__.py  api.py  client.py  consumer.py  sessions.py
marlinspike/emit/: __init__.py  navigator.py  ocsf.py  sigma.py  stix.py
marlinspike/templates/: _macros.html  asset_baseline.html  assets.html  audit.html  base.html  capture.html  dashboard.html  diff.html  findings.html  iocs.html  live.html  login.html  profile.html  projects.html  reports.html  scan_progress.html  scans.html  system.html  users.html  viewer.html
marlinspike/translations/: en.json  fr.json
migrations/: README  alembic.ini  env.py
migrations/versions/: 0001_baseline.py  0002_project_members.py
msengine/: pyproject.toml
msengine/msengine/: engine.py
plugins/marlinspike_apt/: __init__.py  __main__.py  plugin.py
plugins/marlinspike_arp/: __init__.py  __main__.py  plugin.py
plugins/marlinspike_cisa/: __init__.py  __main__.py  catalog.py  plugin.py
plugins/marlinspike_cisa/catalog/: cisa_catalog.json
rules/apt/: base.yaml
rules/arp/: base.yaml
rules/cisa/: base.yaml
scripts/: capture-screenshots.py  capture_mitre_screenshots.py  update-subtrees.sh
templates/: assets.html  diff.html  findings.html  projects.html  reports.html  scans.html  system.html  users.html  viewer.html
tests/: test_aggregate.py  test_alembic_migrations.py  test_asset_context.py  test_baselines.py  test_capture_policy.py  test_cisa_plugin.py  test_csrf_token.py  test_detection_plugins.py  test_detection_scenarios.py  test_extract_timeline.py  test_iocs.py  test_marlinspike_apt.py  test_marlinspike_arp.py  test_navigator_emit.py  test_ocsf_emit.py  test_project_sharing.py  test_recovery.py  test_run_store.py  test_security_v352.py  test_sigma_emit.py  test_stix_emit.py  test_taxonomy.py
tests/fixtures/: gen_detection_pcaps.py
translations/: en.json  fr.json
